# pytorch-multilabel-vision

./: .gitignore  README.md  baseline_split.pt  cnn_thresholds.pt  cnn_train.err  cnn_train.out  data_load.ipynb  eval.py  eval_baselines.py  final_project_load_data.py  load_data.py  pyproject.toml  train.sbatch  train_baseline.py  train_cnn.py
.github/workflows/: tests.yml
configs/: default.yaml
docs/: ARTIFACTS.md  EXPERIMENTS.md  MODEL_CARD.md
scripts/: demo.py  evaluate.py  predict.py  train.py
src/pytorch_multilabel_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/vision_tagger/: __init__.py  config.py  constants.py  data.py  inference.py  metrics.py  model.py  thresholds.py
tests/: test_data.py  test_metrics_thresholds.py  test_model.py
