[project]
name = "pytorch-multilabel-vision"
version = "0.1.0"
description = "PyTorch pipeline for multi-label object recognition with transfer learning and threshold tuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "matplotlib>=3.9.0",
]
